# AI-Live

./: .gitignore  README.md  announcements.json  compile_proto.sh  config.py  internal_credentials.py  main.py  prd.md  pyproject.toml  server.py  sign_wrapper.js  tk-live.spec
ai/: agent.py  replier.py  to_zh_translator.py
api/: app.py  ws.py
api/routes/: announce.py  bgm.py  config_routes.py  products.py  session.py
core/: engine.py  events.py  session.py
danmaku/: client.py  facebook_client.py  tiktok_client.py  youtube_client.py
knowledge/: announcement_store.py  product_store.py
proto/: douyin.proto  stream_list.proto  stream_list_pb2.py  stream_list_pb2_grpc.py
scripts/: train_voice.py
tts/: speaker.py  volcengine_speaker.py  volcengine_voices.py
utils/: audio_player.py  bgm_player.py  message_queue.py  paths.py  zh_text.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/dashboard/: AIResponsePanel.tsx  AnnounceControlBar.tsx  BgmControlBar.tsx  ChatPanel.tsx  EmptyState.tsx
web/src/components/layout/: Sidebar.tsx
web/src/components/modals/: PlatformSelectModal.tsx
web/src/components/settings/: AIConfig.tsx  AnnounceScriptsConfig.tsx  PlatformConfig.tsx  TTSConfig.tsx  TriggerKeywords.tsx
web/src/components/ui/: button.tsx  dialog.tsx  (+1 more)
web/src/hooks/: useWebSocket.ts
web/src/lib/: api.ts  debugFlags.ts  utils.ts
web/src/pages/: AnnounceScriptsPage.tsx  DashboardPage.tsx  ProductsPage.tsx  SettingsPage.tsx
web/src/stores/: sessionStore.ts
web/src/types/: index.ts
